refactor: use more concise APIs to collect streams (#5031)