@@ -26,12 +26,10 @@ public class GridDragDropFilters extends Div {
     public GridDragDropFilters() {
 
         List<Person> people = DataService.getPeople();
-        managers = people.stream().filter(Person::isManager)
-                .collect(Collectors.toList());
+        managers = people.stream().filter(Person::isManager).toList();
         staffGroupedByMangers = people.stream()
                 .filter(person -> person.getManagerId() != null)
-                .collect(Collectors.groupingBy(Person::getManagerId,
-                        Collectors.toList()));
+                .collect(Collectors.groupingBy(Person::getManagerId));
 
         // tag::snippet[]
         TreeGrid<Person> treeGrid = setupTreeGrid();
